[gd_scene load_steps=4 format=3 uid="uid://braxxc8q5mm1s"]

[ext_resource type="Script" path="res://src/hasher.gd" id="1_tpfco"]
[ext_resource type="PackedScene" uid="uid://cbf62vrustvhy" path="res://src/dropoff.tscn" id="1_vhvlr"]
[ext_resource type="PackedScene" uid="uid://gab4175pns3w" path="res://src/data_builder.tscn" id="3_432dj"]

[node name="Hasher" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_tpfco")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Hasher"
horizontal_alignment = 1

[node name="Output" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Output  >
"
horizontal_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HashFunction" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("1_vhvlr")]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
text = "Hash
Function
< >"
type = 1
area = Vector2(120, 120)

[node name="Data" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("1_vhvlr")]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
text = "Data"
area = Vector2(120, 120)

[node name="Hash" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
disabled = true
text = "Hash"

[node name="DataBuilder" parent="." instance=ExtResource("3_432dj")]
unique_name_in_owner = true

[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/Hash" to="." method="_on_hash_pressed"]
